# map_search_engine

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  startup.py
backend/app/api/endpoints/: find_route.py
backend/app/api/models/: planet_osm_point.py  ways.py
backend/app/api/schemas/: navigation_node.py  search_query.py
backend/app/core/: config.py  db.py
backend/app/db/: setup.py
backend/app/repository/: planet_osm_point_repository.py  ways_repository.py
database/: Dockerfile  configuration.style  mapconfig.xml  migrate-spatial-data.sh
database/sql_scripts/: get_closest_ways_osm_id.sql  get_long_lat.sql  get_optimal_start_end_id.sql  get_osm_id.sql
frontend_streamlit/: Dockerfile  pyproject.toml
frontend_streamlit/src/: main.py
